Fix "Add to Desktop" dialog for stopped document loads

Prior to this patch, and due to a regression introduced recently in
https://chromium-review.googlesource.com/c/chromium/src/+/700434, the
steps described in the linked bug (or, more broadly, stopped document
loads) cause ContentFaviconDriver to report no favicon candidates, that
is, expose an empty vector in ContentFaviconDriver::favicon_urls().

This is an API violation according to the existing documentation and
a scenario that confuses the only actual caller of favicon_urls(), which
is FaviconDownloader. This class assumes favicon candidates will be
received later on via DidUpdateFaviconURLs(), but that's never the case.
Hence, the class waits forever and the "Add to Desktop" dialog never
gets shown.

We fix the issue by exposing the candidates in favicon_urls() also for
the cases where the list may be partial, restoring the behavior prior
to the offending patch linked above.

Bug: 799587
Change-Id: I76ca2a3a97044469b56c9521d99f334c9479e2f7